--- a/id3.man
+++ b/id3.man
@@ -49,10 +49,9 @@ files. It can generate tag fields from the filename and other variables,
 and/or rename files, using an intuitive syntax.
 
 .I id3
-currently supports the old-style ID3 format with track-number extension
-(ID3 v1.1), as well as the more complicated ID3v2 (ID3 v2.2.0, v2.3.0) format.
-This also means use is pretty much limited to audio files which use these
-formats, e.g, MPEG-1 Layer III.
+currently supports old-style ID3v1 tags, Lyrics3v2, as well as the more complex ID3v2 format.
+This means its use is limited to audio files which use these
+formats, i.e. MPEG-1 Layer III.
 .SH OPTIONS
 Order of the options is only important where specified.
 .TP
@@ -244,7 +243,7 @@ Values get read (where applicable) from the source tag, which is the left-most
 tag selected on the command line, and reflect the state of the file before any
 modifications were made. If the source value is not available, the variable
 fails.
-\fI%p%f\fR combines to the full path and file name. The \fI%x\fR value
+\fI%_p%_f\fR combines to the raw full path and file name. The \fI%x\fR value
 gets increased every time it has been substituted inside the same directory,
 and is intended for auto-numbering. \fI%X\fR increases for every file
 processed.
@@ -360,16 +359,14 @@ genre in this list, and selects the closest possible match (if any). For the
 genre numbers and exact spelling, see \fIid3v1.c\fR in the source
 distribution. An empty or invalid genre is assigned the number 0.
 
-id3 automatically writes Unicode tags where necessary. Depending on your
-system, you may only be able to fully work with all characters if you are
-using an UTF-8 locale.
+The ID3v1 format only supports to the ISO-8859-1 (Latin 1) encoding. If you
+need other Unicode characters, you need to use ID3v2 tags.
 
-id3 will write the ID3v2 tag version that was encountered and does not convert
-from one version to another. If no existing tag is found, ID3 v2.3 will be
-written (this may change in a future version).
+When using -2, id3 will write ID3 v2.3 by default, unless a file is already
+tagged with ID3 v2.2 (this is done by iTunes). id3 can read ID3 v2.4 tags, but
+these will be converted to ID3 v2.3 when modified.
 
-The -w\fIFRAME\fR parameter only knows the following ID3v2.2 (3
-letter)/ID3v2.3 (4 letter) frames:
+The -w\fIFRAME\fR parameter and %{\fIFRAME\fR} substitution only know the following ID3v2.2 (3 letter)/ID3v2.3 (4 letter) frames:
 T??/T??? (text),
 W??/W??? (links),
 COM/COMM (comment),
@@ -380,13 +377,11 @@ USER (tos, v2.3 only).
 Frames that do not match the tag type encountered are ignored and not
 converted. It is a no-op for ID3v1.
 
-id3 does not (currently) support ID3v2 v4.0 tags. It also does not support
-ID3v2 features as compression, encryption, ...
+id3 does not support unnecessary ID3v2 features such as compression, encryption, or embedding binary data (including image files).
 .SH AUTHOR
 Written by Marc R. Schoolderman <squell@alumina.nl>.
 .SH COPYRIGHT
 This is free software; see the source for copying conditions. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH SEE ALSO
-Program homepage: https://squell.github.io/id3
-
+Program homepage: \fIhttps://squell.github.io/id3\fR
