--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 Changelog for 'id3'.
 
 2015-347 (W50):
+  main.cpp: [cli change] added --long-options; see `id3 --help'
   fileexp.cpp: [bugfix] globbing failed if prefix contained a directory
     without read access; also fixes a segfault if cwd wasn't readable
 
