--- a/id3.man
+++ b/id3.man
@@ -80,8 +80,8 @@ process/add ID3v2 tags.
 process/add Lyrics3 tags.
 
 If more than one tag type is specified, they are all written, but only the
-left-most tag is read from. If no tag type is specified, 
-.I id3 
+left-most tag is read from. If no tag type is specified,
+.I id3
 will by default
 attempt to read ID3v2, Lyrics3 and ID3v1 tags in that order, only modify existing ID3v2 and Lyrics3 tags, and modify/add ID3v1 tags.
 .TP
@@ -98,7 +98,7 @@ force the following argument to be interpreted as a filename. Use this for
 files that start with a `-' (dash).
 .P
 .SS Modifying operations
-The default operation of 
+The default operation of
 .I id3
 is to list the tags found. By using any of the following options, this behaviour is inhibited.
 .TP
@@ -157,8 +157,6 @@ been read, but before any fields are updated.
 Any original tag values not explicitly written to the new tag (for example, by
 using -u) are lost. If \fIfilename\fR does not have any tags, this option is
 identical to the -d option.
-.B SUBSTITUTION
-below.
 .PP
 The following options only apply on the tag most recently selected before
 them, and only have meaning where relevant.
@@ -184,7 +182,7 @@ format documentation for valid \fIFRAME\fR names.
 .BR "\-w\fIFRAME data\fP" ", " "\-\-frame=\fIFRAME data\fP"
 add / update a frame named \fIFRAME\fR with \fIdata\fR in the  tag.
 \fIdata\fR is scanned for substitution variables. Again, consult the format
-documentation. See \fICOMPATIBILITY\fR for more information.
+documentation. See \fBCOMPATIBILITY\fP for more information.
 .PP
 Short-form options can be stacked in a single argument for more convenience.
 For example, running
@@ -196,7 +194,7 @@ is equivalent to:
    id3 -2 -d -a "Artist" -l "Album" -t "Title" *.mp3
 
 .SH SUBSTITUTION
-.I id3 
+.I id3
 can perform \*(lqprintf-like\*(rq substitution on the values prior to
 writing them to a tag. Note that if you want to use pattern matching, you
 HAVE TO enclose the wildcard specification on the command line in double quotes
@@ -243,11 +241,15 @@ Values get read (where applicable) from the source tag, which is the left-most
 tag selected on the command line, and reflect the state of the file before any
 modifications were made. If the source value is not available, the variable
 fails.
-\fI%_p%_f\fR combines to the raw full path and file name. The \fI%x\fR value
+\*(lq%_p%_f\*(rq combines to the raw full path and file name. The \*(lq%x\*(rq value
 gets increased every time it has been substituted inside the same directory,
-and is intended for auto-numbering. \fI%X\fR increases for every file
+and is intended for auto-numbering. \*(lq%X\*(rq increases for every file
 processed.
 .RE
+.TP
+.BI % <modifiers> { FRAME }
+replaced by the content of the \fIFRAME\fP frame in the selected source tag; any
+frame writeable with the \fB-w\fP option can be used; see \fBCOMPATIBILITY\fP for more information.
 .TP
 .B %%
 replaced with a single \*(lq%\*(rq, equivalent to \fB\(rs%\fR
@@ -272,7 +274,7 @@ underscores with spaces, and condenses empty whitespace.
 Split the variable into separate words by looking at the capitalization.
 .TP
 .BR # " (hash\ or\ pound\ sign)
-Attempt to fit numeric values in the substituted string to a desired width, 
+Attempt to fit numeric values in the substituted string to a desired width,
 by removing or adding leading zeros.
 Multiple hash signs can be stacked to indicate the desired width. If there are
 no numeric values, this modifier has no effect.
@@ -285,7 +287,7 @@ fails and will not be used. If more than one fall-back is provided, successive
 fall-backs are tried until one succeeds.
 .RE
 .SH EXAMPLES
-Here are some examples of using 
+Here are some examples of using
 .I id3
 :
 .TP
@@ -332,10 +334,13 @@ Process multiple directories at once.
 Shorthand for the previous example.
 .TP
 \fBid3 -2 -c "Was: %_f" -f "%|Nobody|a - %|Untitled (%x)|t.mp3" "*.mp3"
-Advanced rename. Saves previous filename in the comment field.
+Rename with missing values replaced. Saves previous filename in the comments.
+.TP
+\fBid3 -2 -q "%|%{TPE2}||%{TXXX:ALBUM ARTIST}|?"
+Tries to print the \*(lqalbum artist\*(rq using two possible ID3v2 frames.
 .TP
 \fBid3 -2 -q "%| %a - %|Untitled|t || %t || %1 |?" "*.mp3"
-Generate a playlist.
+Generate a simple list of songs.
 .SH NOTES
 The internal pattern matching emulates the normal pattern matching of
 \*(lqsh\*(rq. It supports ?, * and [].
@@ -362,11 +367,11 @@ distribution. An empty or invalid genre is assigned the number 0.
 The ID3v1 format only supports to the ISO-8859-1 (Latin 1) encoding. If you
 need other Unicode characters, you need to use ID3v2 tags.
 
-When using -2, id3 will write ID3 v2.3 by default, unless a file is already
-tagged with the older ID3 v2.2. id3 can read ID3 v2.4 tags, but
-these will be converted to ID3 v2.3 when modified.
+When using -2, id3 will write ID3v2.3 by default, unless a file is already
+tagged with the older ID3v2.2. id3 can read ID3v2.4 tags, but
+these will be converted to ID3v2.3 when modified.
 
-The -w\fIFRAME\fR parameter and %{\fIFRAME\fR} substitution only know the following ID3v2.2 (3 letter)/ID3v2.3 (4 letter) frames:
+Furthermore, with ID3v2 tags, the -w\fIFRAME\fR option and %{\fIFRAME\fR} substitution only support the following ID3v2.2 (3 letter)/ID3v2.3 (4 letter) frames:
 T??/T??? (text),
 W??/W??? (links),
 COM/COMM (comment),
@@ -374,8 +379,12 @@ IPL/IPLS (involved  people),
 ULT/USLT (lyrics),
 CNT/PCNT (numeric play counter) and
 USER (tos, v2.3 only).
-Frames that do not match the tag type encountered are ignored and not
-converted. It is a no-op for ID3v1.
+Attempts to write ID3v2.2 frames to ID3v2.3 or vice versa will be ignored.
+
+Several ID3v2 frames support additional descriptors (TXXX, WXXX, COMM, USLT). These can be read or written using
+the extended syntax -w\fIFRAME\fP:\fIdescriptor\fP and %{\fIFRAME\fP:\fIdescriptor\fP}.
+Descriptors are case sensitive and may contain whitespace.
+Which descriptors are meaningful depends on your music player.
 
 id3 does not support unnecessary ID3v2 features such as compression, encryption, or embedding binary data (including image files).
 .SH AUTHOR
