fixed recursive searches using UNC paths on Windows; + optimizations

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Changelog for 'id3'.
 
+2015-352 (W51):
+  fileexp.cpp: '?' will no langer match against / in --recursive mode;
+    -R was not working on UNC paths. optimized file access.
+
 2015-348 (W50):
   main.cpp: %a variable substitution now will read from the first valid
     tag selected on the commandline, instead of only the first
