--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Changelog for 'id3'.
 2015-352 (W51):
   fileexp.cpp: '?' will no langer match against / in --recursive mode;
     -R was not working on UNC paths. optimized file access.
+  setid3v2.cpp: convert text encoded using v2.4-only encodings
 
 2015-348 (W50):
   main.cpp: %a variable substitution now will read from the first valid
