--- a/README
+++ b/README
@@ -16,7 +16,7 @@
        id3 [-v] [-m] [-123] [-d] [-t title] [-a artist] [-l album]
 	 [-n tracknr] [-y year] [-g genre] [-c comment]
 	 [-f template] [-q format] [-D file] [-R] [-M]
-	 [-E] [-s size] [-u] [-rFRAME] [-wFRAME data] “filespec”
+	 [-E] [-s size] [-u] [-rFRAME] [-wFRAME data] "filespec"
 
     _                _      _   _          
  __| |___ ___ __ _ _(_)_ __| |_(_)___ _ _  
@@ -41,14 +41,17 @@
        filespec ...
 	      specifies the file(s) to be affected by the command.
 
-	      If  you use wildcards, it is necessary to enclose the specifica‐
+	      If  you use wildcards, it is necessary to enclose the specifica-
 	      tion in double quotes ("") for pattern matching to work.
 
-       -h     show command line help
+       -h, --help
+	      show command line help
 
-       -V     display version number and copyright
+       -V, --version
+	      display version number and copyright
 
-       -v     be verbose
+       -v, --verbose
+	      be verbose
 
        -1     process/add ID3v1 tags.
 
@@ -57,16 +60,18 @@
        -3     process/add Lyrics3 tags.
 
 	      If more than one tag type is specified, they  are  all  written,
-	      but only the left-most tag is read from. If no tag type is spec‐
-	      ified, id3 will by default attempt to read  ID3v2,  Lyrics3  and
-	      ID3v1 tags in that order, only modify existing ID3v2 and Lyrics3
-	      tags, and modify/add ID3v1 tags.
+	      and the left-most one that is found is used for variable substi-
+	      tution. If no tag type is specified, id3 will by default attempt
+	      to read ID3v2, Lyrics3 and ID3v1 tags in that order, only modify
+	      existing ID3v2 and Lyrics3 tags, and modify/add ID3v1 tags.
 
-       -R     searches recursively; Normally, path separators in  filespec  do
-	      not  get matched by `?' or `*' wildcards. With this switch, they
-	      are treated as an ordinary character.
+       -R, --recursive
+	      searches recursively; When this is  enabled,  `*'  wildcards  in
+	      filespec will also match against directory separators. Normally,
+	      this is not the case.
 
-       -M     preserve last modification time of files operated on
+       -M, --keep-time
+	      preserve last modification time of files operated on
 
        --     force the following argument to be interpreted  as  a  filename.
 	      Use this for files that start with a `-' (dash).
@@ -75,81 +80,84 @@
        The default operation of id3 is to list the tags found. By using any of
        the following options, this behaviour is inhibited.
 
-       -d     do not re-use existing tag data. If no new  tag  information  is
+       -d, --delete
+	      do not re-use existing tag data. If no new  tag  information  is
 	      specified  in  conjunction  with	this option, all selected tags
 	      will be removed.
 
-       -t title
-       -a artist
-       -l album
-       -n tracknr
-       -y year
-       -g genre
-       -c comment
+       -t title,     --title title
+       -a artist,    --artist artist
+       -l album,     --album album
+       -n tracknr,   --track tracknr
+       -y year,      --year year
+       -g genre,     --genre genre
+       -c comment,   --comment comment
 
 	      add/replace the specified fields in all selected tags  with  the
-	      values  given.  Field  values are scanned for substitution vari‐
+	      values  given.  Field  values are scanned for substitution vari-
 	      ables, see SUBSTITUTION below. If a  field  value  is  a	single
 	      variable, and its substitution fails, no operation is performed.
 
 	      Genres  can  be specified either directly or with their assigned
 	      number, regardless of tag format.
 
-       -f filename-template
+       -f filename-template, --rename filename-template
 	      rename files encountered according  to  filename-template.   The
-	      argument	is  scanned for substitution variables. An empty vari‐
-	      able will by default get replaced  with  “Unknown”.   Trying  to
+	      argument	is  scanned for substitution variables. An empty vari-
+	      able will by default get replaced  with  "Unknown".   Trying  to
 	      rename to an already existing file will cause an error.
 
-       -q format
-	      for each file encountered, format will get scanned for substitu‐
+       -q format, --query format
+	      for each file encountered, format will get scanned for substitu-
 	      tion variables, and  written  to	standard  output.  Using  this
 	      option will block any attempt to modify files.
 
-       -m     match  mode;  interpret  any  variables found in a filespec as a
-	      wildcard, and set the tag field  corresponding  to  the  matched
-	      wildcard.     Thus,   `-m "%a - %t.mp3"'	 is   equivalent   for
-	      `-a %1 -t %2 "* - *.mp3"'.  This option is  merely  a  shorthand
-	      and  does  not add any intelligence; in particular, any variable
-	      interpreted still counts as a wildcard, see SUBSTITUTION below.
+       -m, --match
+	      match  mode; interpret any substitution variables (see SUBSTITU-
+	      TION below) found in a filespec as a wildcard, and set the  cor-
+	      responding tag field to the matched portion of the filename.
 
-       -D filename
-	      duplicate and copy the tags of the specified format as found  in
-	      filename	to  the target files. The tag in each file is replaced
-	      after any variables have been read, but before  any  fields  are
-	      updated.
+	      Thus,    `id3   -m "%a - %t.mp3"'   is   short-hand   for   `id3
+	      -a %1 -t %2 "* - *.mp3"'.
 
-	      Any  original  tag  values  not explicitly copied to the new tag
-	      (for example, by using -u) are lost. If filename does  not  have
-	      any  tags, this option is identical to the -d option.  SUBSTITU‐
-	      TION below.
+       -D filename, --duplicate filename
+	      duplicate and copy the tags found  in  filename  to  the	target
+	      files.  The  tag in each target file is replaced after any vari-
+	      ables have been read, but before any fields are updated.
+
+	      Any original tag values not explicitly written to  the  new  tag
+	      (for  example,  by using -u) are lost. If filename does not have
+	      any tags, this option is identical to the -d option.
 
        The following options only apply on  the  tag  most  recently  selected
        before them, and only have meaning where relevant.
 
-       -E     only  write  a  tag of the most recently selected type if a file
+       -E, --if-exists
+	      only  write  a  tag of the most recently selected type if a file
 	      already contains it; do not add new ones.
 
-       -u     update all standard tag fields by copying them from  the	source
+       -u, --update
+	      update all standard tag fields by copying them from  the	source
 	      tag. This is similar to writing `-talnygc %t %a %l %n %y %g %c',
 	      but only operates on the most recent tag. It is possible for the
 	      source and destination tag to be the same.
 
-       -s size
-	      try to write a new tag using exactly size bytes, adding / remov‐
+       -s size, --size size
+	      try to write a new tag using exactly size bytes, adding / remov-
 	      ing padding as necessary. The resulting tag will have no padding
 	      if size is smaller than the actual size necessary.
 
-       -rFRAME
-	      remove  all occurrences of frames named FRAME from the tag. Con‐
-	      sult the format documentation for valid FRAME names.
+       -rFRAME, --remove=FRAME
+	      remove  occurrences  of frames named FRAME from the tag. Consult
+	      the format  documentation  for  valid  FRAME  names.   For  text
+	      frames, it is equivalent to `-wFRAME ""'.
 
-       -wFRAME data
+       -wFRAME data, --frame=FRAME data
 	      add / update a frame named FRAME with data in the  tag.  data is
-	      scanned  for  substitution  variables. Again, consult the format
+	      scanned for substitution variables. Again,  consult  the	format
 	      documentation. See COMPATIBILITY for more information.
 
-       Individual options can be stacked in a single argument for more	conve‐
+       Short-form  options can be stacked in a single argument for more conve-
        nience.	For example, running
 
 	  id3 -2d -alt "Artist" "Album" "Title" *.mp3
@@ -164,18 +172,18 @@
 (_-< || | '_ (_-<  _| |  _| || |  _| / _ \ ' \ 
 /__/\_,_|_.__/__/\__|_|\__|\_,_|\__|_\___/_||_|
                                                
-       id3 can perform “printf-like” substitution on the values prior to writ‐
-       ing them to a tag. Note that if you want to use pattern	matching,  you
-       HAVE  TO enclose the wildcard specification on the command line in dou‐
+       id3 can perform "printf-like" substitution on the values prior to writ-
+       ing  them  to a tag. Note that if you want to use pattern matching, you
+       HAVE TO enclose the wildcard specification on the command line in  dou-
        ble quotes to prevent your shell from expanding any wildcards.
 
-       \c     escape sequence. \n, \r, \t, \v, \f, \b, \a, get replaced as  in
-	      C,  any other character will be stripped of any special meaning.
+       \c     escape  sequence. \n, \r, \t, \v, \f, \b, \a, get replaced as in
+	      C, any other character will be stripped of any special  meaning.
 	      E.g., \n becomes the newline character, \\ a single backslash.
 
        %<modifiers>N
-	      where N <- [0..9] replaced with the portion  of  the  file  path
-	      matching	the nth `*' (asterisk) wildcard in the file specifica‐
+	      where  N	<-  [0..9]  replaced with the portion of the file path
+	      matching the nth `*' (asterisk) wildcard in the file  specifica-
 	      tion. 0 is taken to mean 10.
 
        %<modifiers>c
@@ -195,20 +203,25 @@
 	      %X file counter
 
 	      Values get read (where applicable) from the source tag, which is
-	      the  left-most tag selected on the command line, and reflect the
-	      state of the file before any modifications  were	made.  If  the
-	      source  value is not available, the variable fails.  %_p%_f com‐
-	      bines to the raw full path and file  name.  The  %x  value  gets
-	      increased  every	time  it  has been substituted inside the same
-	      directory, and is intended for auto-numbering. %X increases  for
-	      every file processed.
+	      the left-most tag selected on the command line, and reflect  the
+	      state  of  the  file  before any modifications were made. If the
+	      source value is not available,  the  variable  fails.   "%_p%_f"
+	      combines to the raw full path and file name. The "%x" value gets
+	      increased every time it has been	substituted  inside  the  same
+	      directory,  and  is  intended for auto-numbering. "%X" increases
+	      for every file processed.
 
-       %%     replaced with a single “%”, equivalent to \%
+       %<modifiers>{FRAME}
+	      replaced by the content of  the  FRAME  frame  in  the  selected
+	      source  tag; any frame writeable with the -w option can be used;
+	      see COMPATIBILITY for more information.
+
+       %%     replaced with a single "%", equivalent to \%
 
        %|text||alt text||...|?
 	      substituted by the first text that was completely successful, or
-	      fails as empty, see fall-backs below. This can  be  used	as  an
-	      all-or-nothing substitution. A lone “%?” always fails.
+	      fails  as  empty,  see  fall-backs below. This can be used as an
+	      all-or-nothing substitution. A lone "%?" always fails.
 
    Available <modifiers> (optional):
        + (plus sign)
@@ -218,26 +231,26 @@
 	      Convert all characters to lowercase
 
        _ (underscore)
-	      Use  the	raw  value  of	the  variable.	Normally, substitution
-	      replaces any underscores with spaces, and condenses empty white‐
+	      Use the  raw  value  of  the  variable.  Normally,  substitution
+	      replaces any underscores with spaces, and condenses empty white-
 	      space.
 
        * (asterisk)
-	      Split  the  variable into separate words by looking at the capi‐
+	      Split the variable into separate words by looking at  the  capi-
 	      talization.
 
        # (hash or pound sign)
-	      Attempt to fit numeric values in the  substituted  string  to  a
-	      desired  width,  by  removing or adding leading zeros.  Multiple
-	      hash signs can be stacked to  indicate  the  desired  width.  If
+	      Attempt  to  fit	numeric  values in the substituted string to a
+	      desired width, by removing or adding  leading  zeros.   Multiple
+	      hash  signs  can	be  stacked  to indicate the desired width. If
 	      there are no numeric values, this modifier has no effect.
 
        |fall-back|
 	      If substitution for a variable fails, attempt fall-back instead.
 	      fall-back  itself  may  be  empty  or  contain  other  variables
-	      (including  other  fall-backs).  If fall-back contains variables
-	      that fail, the fall-back fails and will not  be  used.  If  more
-	      than  one fall-back is provided, successive fall-backs are tried
+	      (including other fall-backs). If	fall-back  contains  variables
+	      that  fail,  the	fall-back  fails and will not be used. If more
+	      than one fall-back is provided, successive fall-backs are  tried
 	      until one succeeds.
 
                          _        
@@ -289,30 +302,33 @@
 	      Shorthand for the previous example.
 
        id3 -2 -c "Was: %_f" -f "%|Nobody|a - %|Untitled (%x)|t.mp3" "*.mp3"
-	      Advanced rename. Saves previous filename in the comment field.
+	      Rename with missing values replaced. Saves previous filename in the comments.
+
+       id3 -2 -q "%|%{TPE2}||%{TXXX:ALBUM ARTIST}|?"
+	      Tries to print the "album artist" using two possible ID3v2 frames.
 
        id3 -2 -q "%| %a - %|Untitled|t || %t || %1 |?" "*.mp3"
-	      Generate a playlist.
+	      Generate a simple list of songs.
 
           _          
  _ _  ___| |_ ___ ___
 | ' \/ _ \  _/ -_|_-<
 |_||_\___/\__\___/__/
                      
-       The internal pattern matching emulates the normal pattern  matching  of
-       “sh”. It supports ?, * and [].
+       The  internal  pattern matching emulates the normal pattern matching of
+       "sh". It supports ?, * and [].
 
-       A  shell  pattern will never match a forward slash (“/”) or a dot (“.”)
+       A shell pattern will never match a forward slash ("/") or a  dot  (".")
        beginning a filename. Wildcards can be used for directories as well (to
        arbitrary depths), in which case a search will be performed.
 
-       In  an  ambiguous  situation, the pattern matcher will always resolve a
-       “*” wildcard to the shortest possible sequence of tokens. This  differs
-       from  the  behavior  of	regular  expressions, however it tends to make
+       In an ambiguous situation, the pattern matcher will  always  resolve  a
+       "*"  wildcard to the shortest possible sequence of tokens. This differs
+       from the behavior of regular expressions,  however  it  tends  to  make
        sense in the context of filenames.
 
        Do NOT add ID3 tags to files for which it does not make sense, i.e, add
-       them  only  to  MP3  files. In particular, do not add ID3v2 tags to Ogg
+       them only to MP3 files. In particular, do not add  ID3v2  tags  to  Ogg
        files, since ID3v2 tags start at the beginning of the file.
 
                          _   _ _    _ _ _ _        
@@ -320,28 +336,36 @@
 / _/ _ \ '  \| '_ \/ _` |  _| | '_ \ | | |  _| || |
 \__\___/_|_|_| .__/\__,_|\__|_|_.__/_|_|_|\__|\_, |
              |_|                              |__/ 
-       id3 has a built-in genre list of 148 genres. If you pass the -g parame‐
-       ter  a  string  instead of a number when using ID3v1, id3 tries to find
-       the specified genre in this list,  and  selects	the  closest  possible
-       match  (if  any). For the genre numbers and exact spelling, see id3v1.c
-       in the source distribution. An empty or invalid genre is  assigned  the
+       id3 has a built-in genre list of 148 genres. If you pass the -g parame-
+       ter a string instead of a number when using ID3v1, id3  tries  to  find
+       the  specified  genre  in  this	list, and selects the closest possible
+       match (if any). For the genre numbers and exact spelling,  see  id3v1.c
+       in  the	source distribution. An empty or invalid genre is assigned the
        number 0.
 
        The ID3v1 format only supports to the ISO-8859-1 (Latin 1) encoding. If
        you need other Unicode characters, you need to use ID3v2 tags.
 
-       When using -2, id3 will write ID3 v2.3 by default,  unless  a  file  is
-       already tagged with ID3 v2.2 (this is done by iTunes). id3 can read ID3
-       v2.4 tags, but these will be converted to ID3 v2.3 when modified.
+       When  using  -2,  id3  will  write ID3v2.3 by default, unless a file is
+       already tagged with the older ID3v2.2. id3 can read ID3v2.4  tags,  but
+       these will be converted to ID3v2.3 when modified.
 
-       The -wFRAME parameter and %{FRAME} substitution only know the following
-       ID3v2.2 (3 letter)/ID3v2.3 (4 letter) frames: T??/T??? (text), W??/W???
-       (links), COM/COMM  (comment),  IPL/IPLS	(involved   people),  ULT/USLT
-       (lyrics),  CNT/PCNT  (numeric  play counter) and USER (tos, v2.3 only).
-       Frames that do not match the tag type encountered are ignored  and  not
-       converted. It is a no-op for ID3v1.
+       Furthermore, with ID3v2 tags, the -wFRAME option and %{FRAME} substitu-
+       tion only support the following ID3v2.2 (3 letter)/ID3v2.3  (4  letter)
+       frames: T??/T??? (text), W??/W??? (links), COM/COMM (comment), IPL/IPLS
+       (involved  people), ULT/USLT (lyrics), CNT/PCNT (numeric play  counter)
+       and USER (tos, v2.3 only).  Attempts to write ID3v2.2 frames to ID3v2.3
+       or vice versa will be ignored.
 
-       id3  does  not  support unnecessary ID3v2 features such as compression,
+       Several ID3v2 frames can be  specialized  with  additional  descriptors
+       (TXXX,  WXXX,  COMM,  USLT).  These  can  be  read or written using the
+       extended syntax -wFRAME:descriptor and  %{FRAME:descriptor}.   Descrip-
+       tors  are  case	sensitive and may contain whitespace.  For frames that
+       are language-specific (COMM, USLT), the form  FRAME:descriptor:xxx  may
+       also  be  used,	where  xxx  is a three letter ISO-639-2 language code.
+       Which descriptors are meaningful is application-specific.
+
+       id3 does not support unnecessary ID3v2 features	such  as  compression,
        encryption, or embedding binary data (including image files).
 
            _   _            
@@ -356,8 +380,8 @@
 / _/ _ \ '_ \ || | '_| / _` | ' \  _|
 \__\___/ .__/\_, |_| |_\__, |_||_\__|
        |_|   |__/      |___/         
-       This is free software; see the source for copying conditions. There  is
-       NO  warranty;  not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR
+       This  is free software; see the source for copying conditions. There is
+       NO warranty; not even for MERCHANTABILITY or FITNESS FOR  A  PARTICULAR
        PURPOSE.
 
                     _         
